# HW5

./: .env-example  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
assets/: economics_assumptions.md
config/: default.toml  economics.toml  models.toml
docs/: PLAN.md  PRD.md  PRD_airllm.md  PRD_benchmarking.md  PRD_economic_analysis.md  PRD_quantization.md  TODO.md  prompt_engineering_log.md
notebooks/: analysis.ipynb
results/: airllm_demo.json  baseline.json  benchmark_raw.csv  benchmark_raw.json  benchmark_summary.json  economics.json  extension_e1.json  extension_e3.json  giant_proof.json  layer_timeline.json  quant_sweep.csv  quant_sweep.json  quant_sweep_ollama.csv  quant_sweep_ollama.json  tpot_sweep.json
scripts/: download_model.py
src/airllm_local_lab/scripts/: download.py
src/airllm_local_lab/sdk/economics/: api.py  breakeven.py  (+1 more)
src/airllm_local_lab/services/: _benchmark_helpers.py  _report_architecture.py  _report_content.py  _report_extras.py  _report_figs.py  _report_planning.py  _report_sections.py  _report_theory.py  airllm_runner.py  baseline_runner.py  benchmark_pipeline.py  chat.py  economic_model.py  extension_e1_io.py  extension_e3_pagecache.py  giant_proof.py  quant_sweep.py  quant_sweep_ollama.py  report_builder.py  tpot_sweep.py
src/airllm_local_lab/shared/: config.py  gatekeeper.py  logging.py  preflight.py  quality_gate.py  rate_limiter.py
tests/unit/: test_airllm_backend.py  test_airllm_instrument.py  test_airllm_runner.py  test_baseline_runner.py  test_benchmark_pipeline.py  test_chat.py  test_config.py  test_download.py  test_economic_model.py  test_economic_model_main.py  test_economics.py  test_energy.py  test_extensions.py  test_gatekeeper.py  test_giant_proof.py  test_hf_backend.py  test_hf_backend_extended.py  test_layer_timeline.py  test_memory.py  test_model_loader_base.py  test_ollama_backend.py  test_plots.py  test_preflight.py  test_quality_gate.py  test_quality_rater.py  test_quant_sweep.py  test_quant_sweep_ollama.py  test_rate_limiter.py  test_report_builder.py  test_report_figs.py  test_report_sections_extra.py  test_timing.py  test_tpot_sweep.py  test_version.py  test_viz_tables.py
(+13 files in other folders)
