[project]
name = "airllm-local-lab"
version = "1.00"
description = "AirLLM layer-by-layer inference on constrained hardware — deep-dive report + SDK"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.2.2",
    "transformers>=4.40.0,<5.0",
    "airllm>=0.8.0",
    "safetensors>=0.4.3",
    "huggingface-hub>=0.22.0",
    "pydantic>=2.7.0",
    "matplotlib>=3.9.0",
    "psutil>=5.9.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "accelerate>=0.29.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "mlx>=0.31.2",
    "hf-transfer>=0.1.9",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
preflight    = "airllm_local_lab.shared.preflight:main"
baseline     = "airllm_local_lab.services.baseline_runner:main"
airllm-demo  = "airllm_local_lab.services.airllm_runner:main"
sweep        = "airllm_local_lab.services.quant_sweep:main"
benchmark    = "airllm_local_lab.services.benchmark_pipeline:main"
economics    = "airllm_local_lab.services.economic_model:main"
report       = "airllm_local_lab.services.report_builder:main"
quality-gate = "airllm_local_lab.shared.quality_gate:main"
download     = "airllm_local_lab.scripts.download:main"
ext-io       = "airllm_local_lab.services.extension_e1_io:main"
ext-pagecache = "airllm_local_lab.services.extension_e3_pagecache:main"
chat          = "airllm_local_lab.services.chat:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airllm_local_lab"]

[tool.ruff]
line-length = 120
src         = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--cov=airllm_local_lab --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "src/**/__init__.py"]

[tool.coverage.report]
fail_under = 85

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
